# Agentic_rag_chat

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-sandbox.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_initial_schema.py  20260424_0002_rls_policies.py
backend/app/: main.py
backend/app/agents/: intent.py  rag.py
backend/app/api/: README.md  admin.py  auth.py  chat.py  dashboard.py  kg.py  kpi.py  providers.py  sandbox.py  upload.py  workspaces.py
backend/app/core/: config.py  db.py  litellm_router.py  rbac.py  security.py
backend/app/ingestion/: chunking.py  embedding.py  kg_extract.py  ocr.py  parsers.py  pipeline.py  vlm.py
backend/app/models/: db.py  schemas.py
backend/app/services/: kpi.py  minio.py  neo4j.py  providers.py  qdrant.py  sandbox.py
backend/tests/: conftest.py  test_admin_kpi_dashboard.py  test_alembic.py  test_auth.py  test_chat.py  test_chunking.py  test_healthz.py  test_intent.py  test_kg_extract.py  test_kpi_engine.py  test_parsers.py  test_providers.py  test_sandbox.py  test_security.py  test_upload.py  test_vlm_schema.py  test_workspaces.py
docs/: ARCHITECTURE.md  FLOWS.md  INSTALL.md  README.md
docs/diagrams/: .mermaid-config.json  README.md  auth-and-registration.mmd  dashboard-builder.mmd  end-to-end-question.mmd  extract.py  first-run-flow.mmd  (+14 more)
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
infra/: docker-compose.yml
(+24 files in other folders)
