[project]
name = "agentic-rag-backend"
version = "0.0.1"
description = "Backend for the Agentic RAG Chat platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM", "RUF"]
# S105 hardcoded-password-string: false positives on "access"/"refresh" token types
# S608 possible-sql-injection: Cypher templates use validated allowlists, not user input
# B008 function-call-in-default-argument: FastAPI Depends() is the idiomatic default
ignore = ["S101", "S105", "S608", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
